[package]
name = "codecrafters-sqlite"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[[bin]]
name = "codecrafters-sqlite"
path = "src/main.rs"

[lib]
name = "codecrafters_sqlite"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
num-traits = "0.2.19"
regex = "1.12.2"
thiserror = "1.0.38"                             # error handling
